# lat

./: .gitignore  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md
cmake/: updateSubmodules.cmake
include/: matrix.h  utils.h
src/: main.c  main.cpp  matrix.cpp
tests/: CMakeLists.txt  test_matrix.cpp
